--- a/requirements.txt
+++ b/requirements.txt
@@ -53,8 +53,10 @@ nbformat==5.9.2
 nest-asyncio==1.5.7
 notebook==7.0.2
 notebook_shim==0.2.3
+numpy==1.25.2
 overrides==7.4.0
 packaging==23.1
+pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
@@ -69,6 +71,7 @@ pycparser==2.21
 Pygments==2.16.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+pytz==2023.3
 PyYAML==6.0.1
 pyzmq==25.1.1
 qtconsole==5.4.3
@@ -89,6 +92,7 @@ tomli==2.0.1
 tornado==6.3.3
 traitlets==5.9.0
 typing_extensions==4.7.1
+tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.0.4
 wcwidth==0.2.6
